--- a/views/site/index.twig
+++ b/views/site/index.twig
@@ -30,7 +30,7 @@
                 </p>
 
                 <p>
-                    Исходники данной системы вы можете найти на сайт <a href="https://github.com/sc0rp1d/schedule"
+                    Исходники данной системы вы можете найти на сайте <a href="https://github.com/sc0rp1d/schedule"
                                                                         target="_blank">GitHub</a>.
                 </p>
             </div>
